Trying to fix quiz on mobile

--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -1163,6 +1163,7 @@ pre {
   opacity: 0;
   transition: opacity 0.5s;
   margin-bottom: 150px;
+  overflow: scroll;
 }
 
 .active-slide {
@@ -1176,6 +1177,7 @@ pre {
   margin-bottom: 30px;
   z-index: 0;
   height: 500px;
+  overflow: scroll;
 }
 
 .answers {
@@ -1183,6 +1185,7 @@ pre {
    margin-bottom: 30px;
    margin-left: 20px;
    display: inline-block;
+   overflow: scroll;
 }
 
 .answers label {
